unpackaged/main/default/objects/Notaria__c/Notaria__c.object-meta.xml
<CustomObject>
    <label>Notaría</label>
    <nameField>
        <label>Notaría</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notarías</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>