unpackaged/main/default/objects/Notaria__c/fields/Correo_Notificaciones__c.field-meta.xml
<CustomField>
    <fullName>Correo_Notificaciones__c</fullName>
    <label>Correo Notificaciones</label>
    <type>Email</type>
</CustomField>