unpackaged/main/default/objects/Notaria__c/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <label>Dirección</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>