unpackaged/main/default/objects/Notaria__c/fields/Estado_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Estado_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Estado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>