unpackaged/main/default/objects/Notaria__c/fields/Estatus_Notaria__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Notaria__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Estatus Notaría</label>
    <type>Checkbox</type>
</CustomField>