unpackaged/main/default/objects/Notaria__c/fields/Estatus_Solicitud__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Solicitud__c</fullName>
    <label>Estatus Solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Por Aprobar</fullName>
            </value>
            <value>
                <fullName>Aprobada</fullName>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>