unpackaged/main/default/objects/Notaria__c/fields/N_solicitud__c.field-meta.xml
<CustomField>
    <fullName>N_solicitud__c</fullName>
    <displayFormat>SOL-{0000}</displayFormat>
    <label>No. Solicitud</label>
    <type>AutoNumber</type>
</CustomField>