unpackaged/main/default/objects/Notaria__c/fields/Notario__c.field-meta.xml
<CustomField>
    <fullName>Notario__c</fullName>
    <label>Notario</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>