unpackaged/main/default/objects/Notaria__c/fields/Operacion_unica__c.field-meta.xml
<CustomField>
    <fullName>Operacion_unica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operación Única</label>
    <type>Checkbox</type>
</CustomField>