unpackaged/main/default/objects/Notaria__c/fields/Telefono_secundario__c.field-meta.xml
<CustomField>
    <fullName>Telefono_secundario__c</fullName>
    <label>Teléfono secundario</label>
    <type>Phone</type>
</CustomField>