unpackaged/main/default/objects/Notaria__c/fields/Tipo_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_solicitud__c</fullName>
    <label>Tipo de solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apertura de Fraccionamiento</fullName>
            </value>
            <value>
                <fullName>Nueva Asignación de Notaría</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>