unpackaged/main/default/objects/Notaria__c/fields/Todo__c.field-meta.xml
<CustomField>
    <fullName>Todo__c</fullName>
    <defaultValue>&quot;Todo&quot;</defaultValue>
    <externalId>true</externalId>
    <label>Todo</label>
    <length>5</length>
    <type>Text</type>
</CustomField>