unpackaged/main/default/objects/Notaria__c/validationRules/correo2_no_editable_si_sol_aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>correo2_no_editable_si_sol_aprobada</fullName>
    <active>true</active>
    <description>No puedes modificar el correo si la solicitud está aprobada</description>
    <errorConditionFormula>AND(ISCHANGED(Correo_Notificaciones__c  ),  
ISPICKVAL( Estatus_Solicitud__c , &#39;Aprobada&#39;))</errorConditionFormula>
    <errorDisplayField>Correo_Notificaciones__c</errorDisplayField>
    <errorMessage>No puedes modificar el correo si la solicitud está aprobada</errorMessage>
</ValidationRule>