unpackaged/main/default/objects/Notaria__c/validationRules/Correo_no_editable_sol_aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Correo_no_editable_sol_aprobada</fullName>
    <active>true</active>
    <description>No puedes modificar el correo si la solicitud está probada</description>
    <errorConditionFormula>AND(ISCHANGED( Correo_electronico__c  ), 
ISPICKVAL( Estatus_Solicitud__c , &#39;Aprobada&#39;))</errorConditionFormula>
    <errorMessage>No puedes modificar el correo si la solicitud está probada</errorMessage>
</ValidationRule>