unpackaged/main/default/objects/Notaria__c/validationRules/Direccion_no_editable_sol_aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Direccion_no_editable_sol_aprobada</fullName>
    <active>true</active>
    <description>No puedes modificar la Dirección si la solicitud está probada</description>
    <errorConditionFormula>AND(ISCHANGED( Direccion__c  ), 
ISPICKVAL( Estatus_Solicitud__c , &#39;Aprobada&#39;))</errorConditionFormula>
    <errorDisplayField>Direccion__c</errorDisplayField>
    <errorMessage>No puedes modificar la Dirección si la solicitud está probada</errorMessage>
</ValidationRule>