unpackaged/main/default/objects/Notaria__c/validationRules/Estado_no_editable_sol_aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Estado_no_editable_sol_aprobada</fullName>
    <active>true</active>
    <description>No puedes modificar el estado si la solicitud ha sido aprobada</description>
    <errorConditionFormula>AND(ISCHANGED(Estado__c  ), 
ISPICKVAL( Estatus_Solicitud__c , &#39;Aprobada&#39;))</errorConditionFormula>
    <errorDisplayField>Estado__c</errorDisplayField>
    <errorMessage>No puedes modificar el Estado si la solicitud ha sido aprobada</errorMessage>
</ValidationRule>