unpackaged/main/default/objects/Notaria__c/validationRules/Notario_no_editable_en_estatus_aprobada.validationRule-meta.xml
<ValidationRule>
    <fullName>Notario_no_editable_en_estatus_aprobada</fullName>
    <active>true</active>
    <description>No puedes modificar el notario si la solicitud ya está aprobada</description>
    <errorConditionFormula>AND(ISCHANGED( Notario__c  ), 
ISPICKVAL( Estatus_Solicitud__c , &#39;Aprobada&#39;))</errorConditionFormula>
    <errorDisplayField>Notario__c</errorDisplayField>
    <errorMessage>No puedes modificar el notario si la solicitud ya está aprobada</errorMessage>
</ValidationRule>