unpackaged/main/default/objects/Notaria__c/validationRules/Telefono_no_editable_si_estatus_es_aprob.validationRule-meta.xml
<ValidationRule>
    <fullName>Telefono_no_editable_si_estatus_es_aprob</fullName>
    <active>true</active>
    <description>No puedes modificar el Teléfono si la solicitud está aprobada</description>
    <errorConditionFormula>AND(ISCHANGED(  Telefono__c  ),
ISPICKVAL( Estatus_Solicitud__c , &#39;Aprobada&#39;))</errorConditionFormula>
    <errorMessage>No puedes modificar el Teléfono si la solicitud está aprobada</errorMessage>
</ValidationRule>