unpackaged/main/default/objects/Notaria__c/listViews/APC_Notaria.listView-meta.xml
<ListView>
    <fullName>APC_Notaria</fullName>
    <filterScope>Queue</filterScope>
    <label>APC</label>
    <queue>APC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>